cluster/homelab/apps/firefly/ingress.sensitive.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-internal
  namespace: firefly
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Budget buddy!
    gethomepage.dev/group: Personal
    gethomepage.dev/icon: firefly
    gethomepage.dev/name: Firefly III
    gethomepage.dev/widget.type: firefly
    gethomepage.dev/widget.url: http://firefly.firefly:80
    gethomepage.dev/widget.key: ENC[AES256_GCM,data:0jdfXQvp1clSa1ukqHewZUzS1kE2jJ02iNORt2+G9viti2AWoI+/YRymz/3azwS50PqoH2agLboQdBsFoKyYMCtlxDsXHKIIGNF/fYShCrhzc4AEPIW6zvsAf3OiNM1f+qJXqwLI8D6IAOBkJXcf7iTx5lqhuk6WU+kozh2QxUaczTbDgZ7Jb6b8NAfkwm28pyGr/haqPwojHQnc4Ous0hed672jA7ZHJUf5BPv/Clh/XJwGt09B/Q14rR+BEkaCByb3S8Jxe6kJohy+snjYpwx/guybhvOF9o4atUuEZn9FMg6W3/o7jxDb5eZ7KV6JC4ULJ4nGYgE7eNmfIX4YIqT2WvK9N4Ce2fd/cP3JLasWLQWJB5tq6eMjVGwOJTX2aetxfz63jJGW+F7KZZYNzXuFnN6PbUOkpZsrPiFdWMzZ0mvtjptzxegRt61oNX39 [...]
sops:
  age:
    - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSZ1BLTDA1K2x3S2QxV3Zq
[...]
        otdmYxZysS4TMM+dFP6UIV0EbmB2veTa79FpgBlCnDj6zmE6m6gXzA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-11-16T14:01:42Z"
  mac: ENC[AES256_GCM,data:mEHWZvLQnzsuuTi71vl/BH1huR00bmNLknWJBYPRd668SW+R00Oo9Pg5399+5HUKvGmQoEOKhUYmMaM/KbfOLsrohsmV5V4YD/5iTWLo/nO86zciei+3COtq9bcIuDSYKevInHtKDG4kNQuKNYcMOLv6t1cC3f/SMhFDoD02Nnc=,iv:gyVOXbFHXlLuy/42rhNND0i/bw22tiypMrtnoDt3KZ0=,tag:99PSXLssCjZXBmdCTeif4g==,type:str]
  encrypted_regex: (?i)password|webhook_url|token|key
  version: 3.11.0
