cluster/homelab/apps/firefly/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: firefly
    namespace: firefly
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:WiOLXQ==,iv:V47YUL2vgs2TLVnKWF49y+U4wysibDVGWpoSTe3INJU=,tag:Llrxtb8vp54kE5npM84A3w==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:4KvaAieeErt2d18lQQ==,iv:YPehOGGURQgx0QPxcuxVXisJbiHl72yW+qjvN525Tv8=,tag:W9xHrweytCcCfFiMQB8l7Q==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:NnIumzU8+MA=,iv:+Y4Dlu8Rn2jpE8R1HVl1xQvfufw0VyxuDqwwDwqdzLM=,tag:WZFnzzSRl1pHP0LHOsPspQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:fF66pfj4pw==,iv:vryr6KzYS5jcIesDvk0L7z2Y/ay/W/seT04XZAknAaU=,tag:kBxW0B0JagAJQU+w7jxlVg==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:lInyWGb2D+h9C64=,iv:7fCDlN48taSnLWQImRfdhMRu9tAqjfEwCIS1N9yOgjM=,tag:Fb8vibqkgGpctiR3DqFpZQ==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:QQKFRChvzA==,iv:8HoAhh61lEEX9NbLTVjNHq8/vgXnK4O1dTL+t8EuCkc=,tag:zrCfZvC81EH/rdq+2d2A2w==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:mKRNCYW2ZvbXE3XvsQ8L1vxgfONrp5jYHTvZTl5FAIw=,iv:QbTOhfkf3l7qmt09qiNflT6xTI/kwm0HH4pU+mEbyQc=,tag:0Cks/PDhQEyrs+nHPmx/Hg==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:jtKMi4xIJ7NbXK6TzPcHkIFfttoyn7UQt7hUP91N+Ppjh8ZRF8a83RhnrZ/eYAWN8YF2hcHo/47FjGrS/BA6xYWVLAkest5Oysvj7FybAsax/YmF6HIqX1iALIksAuUJpj0wRHwmUHCM6B/sn9SKxJ0XXk/xa5nKIVxLpUSRaebtf26eH0763GfypNW4k90mKDkKbS+p9k/65Fwjm8aMjHhlEk4P545YvcDTY2BiX0jQEBEhyjdtLj7v4gUTxGY7L25uC+1e7QD+bgazTrkXeqedO1IuYuBHZbNchrsD2BKUT1qALMK6TIL3fCzG7TFICcFQnV78kUs2VzvBrBqj50J0jGGLTgJwq8DM6PK4wEN35B+znJhs1u0ARfNvDKSicPxHwSUAkhlrUQ2eQuJmkAoFPd+1AV6AYNqnmuCq3EyrarW5HSK4qT3nHVvg [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1mq6usjzvvxvcp7tl03yjdqd0kgjhhvhz48kmg86p43nhx0jc75jssw0kfn
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2Q2RQSkE0M2gyMEdhNmVR
[...]
            ICNLeGL7PT/v7qKiRHVvEEfj9O17nGaZEWvmi/J+bigdeexCTrHFwA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-04-06T15:05:59Z"
    mac: ENC[AES256_GCM,data:CVhWTlatwXbr4/24ZmuS1KPu0UHGQ0GIXQm9v8QtQdoSSRs3yDDqIHFKYuAbZO9bB2VO/0NjzjOiHggAqCOaFq9TAmqaco6hbKBoUhtC6v40JkMoGwa/WDCuXlbi9eewza3N+OTZz6MJrpc9FohLvDn0GdfuNS88HqjNGZTc/ZA=,iv:GCQ4zPp1ZsABblBel5ine/avzH+q4+Y1KqoS9xatVCA=,tag:qxr9y6ru6kYUsZ8eeLfByA==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.8.1
